# clown

./: .gitignore  CMakeLists.txt  Notice.md
include/core/: editor.hpp  types.hpp
include/render/: renderer.hpp  screen.hpp
lib/: pdcurses.lib
src/: main.cpp
src/core/: editor.cpp
src/io/: fileio.cpp
src/render/: renderer.cpp  screen.cpp
